<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TMDhelper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="reset_plan">Reset Current TMD</string>
    <string name="start_over">Start Over</string>
    <string name="title">TMD Helper</string>
    <string name="menu_title">Main Menu</string>
    <string name="menu_item_start">Model A Display</string>
    <string name="menu_item_edit">Edit Product Data</string>
    <string name="add_button">Done</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="fullTMD_prompt">Total Full Height TMD\'s For This Build\:</string>
    <string name="lopro_prompt">Total Low Profile TMD\'s For This Build\:</string>
    <string name="next_button">Next--></string>
    <string name="default_entry">empty</string>
    <string name="tmd_heading">Create Your Planogram</string>
    <string name="instructions">Select a shelf to set product:</string>
    <string name="checkbox_label">apply planogram to multiple TMDs</string>
    <string name="empty_alert_message">"Some shelves will be left empty."</string>
    <string name="restart_alert_message">"Current Build Data will be lost."</string>
    <string name="results_title">Order For This Build:</string>
    <string name="start_over_button">Main Menu</string>
    <string name="exit_button">Exit</string>
    <string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="title_activity_number_picker">Apply To Multiple TMDs</string>
	<string name="number_picker_text">Select total number of TMDs that will share this planogram:</string>
</resources>
