<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        >
        
    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/results_title"
        android:textSize="@dimen/tmd_header_size" >
    </TextView>

    <Button
        	android:id="@+id/start_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true" 
            android:text="@string/start_over_button"/>
    
    <Button
        	android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:visibility="invisible"
            android:text="@string/exit_button" />
    <ListView
        android:background="@drawable/lays"
        android:id="@+id/results_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_above="@+id/start_over">    </ListView>

    </RelativeLayout>

</LinearLayout>